commit goofy notebook

--- a/_notebooks/Sprint2/2024-09-30-variables_IO.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-variables_IO.ipynb
@@ -245,8 +245,14 @@
     "\n",
     "Search up naming convention for JavaScript.  Conventions are important to easily recognize purpose of definitions.\n",
     "1. Usage of camelCase.  What is standard?\n",
+    "<br>\n",
+    "The first letter of the first word is lower case, while the first letter of the remaining words are upper case.\n",
     "2. Usage of UPPER_CASE snake_case.  What is standard?\n",
-    "3. Usage of PascalCase.  What is standard?"
+    "<br>\n",
+    "Make it so words are seperated by undercases, and all words are capital\n",
+    "3. Usage of PascalCase.  What is standard?\n",
+    "<br>\n",
+    "Like camelCase but the first letter of all words are capital."
    ]
   },
   {
