--- a/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -201,39 +201,30 @@
        "    // 2D array of questions and answers with titles\n",
        "    var qaArray = [\n",
        "        [\n",
-       "            'GitHub',\n",
+       "            'Powerups',\n",
        "            [\n",
-       "                { question: 'What is a repository?', answer: 'A repository is a storage space where your project lives.' },\n",
-       "                { question: 'How do you create a branch?', answer: 'You can create a branch by using the command git checkout -b branchName.' },\n",
-       "                { question: 'How do you merge branches?', answer: 'You can merge branches by using the command git merge branchName.' },\n",
-       "                { question: 'How do you push changes to GitHub?', answer: 'You can push changes to GitHub by using the command git push origin branchName.' }\n",
+       "                { question: 'What are powerups?', answer: 'Power ups are something the user can pick up to change their survivability.' },\n",
+       "                { question: 'Are all powerups good?', answer: 'No, some powerups are fake and actully hurt the person who picks them up.' },\n",
+       "                { question: 'How do you pick up a powerup?', answer: 'You can pick up a powerup by walking over it' },\n",
+       "                { question: 'Can you get rid of a bad power up?', answer: 'All powerups go away within a few seconds!' }\n",
        "            ]\n",
        "        ],\n",
        "        [\n",
-       "            'Terminal',\n",
+       "            'Targetting',\n",
        "            [\n",
-       "                { question: 'What is the command to list hidden files in a directory?', answer: 'The command to list files in a directory is ls -a.' },\n",
-       "                { question: 'What is the command to change directories?', answer: 'The command to change directories is cd.' },\n",
-       "                { question: 'What is the command to create a new directory?', answer: 'The command to create a new directory is mkdir.' },\n",
-       "                { question: 'What is the command to remove a directory?', answer: 'The command to remove a directory is rm -rf.' }\n",
+       "                { question: 'What happens when a projectile hits you', answer: 'Currently nothing, but I am planning to make it so that you either lose or lose health.' },\n",
+       "                { question: 'How does projectile targetting work', answer: 'The targetting is not were I want it right now, but currently it goes to the nearest player, and after 10 seconds locks on the next closest player.' },\n",
+       "                { question: 'How did I make projectile targetting?', answer: 'I used the distance formula to check which player was closest.' },\n",
+       "                { question: 'Where did you get that amazing sprite sheet from?', answer: 'I made it.' }\n",
        "            ]\n",
        "        ],\n",
        "        [\n",
-       "            'Jupyter Notebook',\n",
+       "            'How I made it',\n",
        "            [\n",
-       "                { question: 'How do you setup a markdown cell?', answer: 'You setup a markdown cell by selecting the cell type dropdown and selecting markdown.' },\n",
-       "                { question: 'How do you setup a code cell?', answer: 'You setup a code cell by selecting the cell type dropdown and selecting code.' },\n",
-       "                { question: 'What kernel do you select to run JavaScript code?', answer: 'You select the Python kernel to run JavaScript code.' },\n",
-       "                { question: 'How do you see JavaScript console output?', answer: 'You see JavaScript console output by using the console.log() method.' }\n",
-       "            ]\n",
-       "        ],\n",
-       "        [\n",
-       "            'JavaScript',\n",
-       "            [\n",
-       "                { question: 'What is JavaScript?', answer: 'JavaScript is a programming language that enables you to create interactive web pages.' },\n",
-       "                { question: 'What is a variable?', answer: 'A variable is a container that stores data.' },\n",
-       "                { question: 'What is a function?', answer: 'A function is a block of code that performs a specific task.' },\n",
-       "                { question: 'What is a loop?', answer: 'A loop is a programming structure that repeats a sequence of instructions.' }\n",
+       "                { question: 'How did you change the sprites sprite when going a direction', answer: 'I changed the sprites sprite using a switch command that checked the x and y velocity of the sprite.' },\n",
+       "                { question: 'How did you fix the frog & fish movement', answer: 'I made it so the position increase of the frog/fish remains constant throughout holding down a key.' },\n",
+       "                { question: 'How did you make the sprite kind of go in a wave when near the player', answer: 'cosineeeeeee!!' },\n",
+       "                { question: 'How did you add the timer', answer: 'I spent what felt like 15 years trying to figure out how to make a function of setinveral to do this. I probably could have simplified it a lot tho' }\n",
        "            ]\n",
        "        ]\n",
        "    ];\n",
@@ -272,39 +263,30 @@
     "    // 2D array of questions and answers with titles\n",
     "    var qaArray = [\n",
     "        [\n",
-    "            'GitHub',\n",
+    "            'Powerups',\n",
     "            [\n",
-    "                { question: 'What is a repository?', answer: 'A repository is a storage space where your project lives.' },\n",
-    "                { question: 'How do you create a branch?', answer: 'You can create a branch by using the command git checkout -b branchName.' },\n",
-    "                { question: 'How do you merge branches?', answer: 'You can merge branches by using the command git merge branchName.' },\n",
-    "                { question: 'How do you push changes to GitHub?', answer: 'You can push changes to GitHub by using the command git push origin branchName.' }\n",
+    "                { question: 'What are powerups?', answer: 'Power ups are something the user can pick up to change their survivability.' },\n",
+    "                { question: 'Are all powerups good?', answer: 'No, some powerups are fake and actully hurt the person who picks them up.' },\n",
+    "                { question: 'How do you pick up a powerup?', answer: 'You can pick up a powerup by walking over it' },\n",
+    "                { question: 'Can you get rid of a bad power up?', answer: 'All powerups go away within a few seconds!' }\n",
     "            ]\n",
     "        ],\n",
     "        [\n",
-    "            'Terminal',\n",
+    "            'Targetting',\n",
     "            [\n",
-    "                { question: 'What is the command to list hidden files in a directory?', answer: 'The command to list files in a directory is ls -a.' },\n",
-    "                { question: 'What is the command to change directories?', answer: 'The command to change directories is cd.' },\n",
-    "                { question: 'What is the command to create a new directory?', answer: 'The command to create a new directory is mkdir.' },\n",
-    "                { question: 'What is the command to remove a directory?', answer: 'The command to remove a directory is rm -rf.' }\n",
+    "                { question: 'What happens when a projectile hits you', answer: 'Currently nothing, but I am planning to make it so that you either lose or lose health.' },\n",
+    "                { question: 'How does projectile targetting work', answer: 'The targetting is not were I want it right now, but currently it goes to the nearest player, and after 10 seconds locks on the next closest player.' },\n",
+    "                { question: 'How did I make projectile targetting?', answer: 'I used the distance formula to check which player was closest.' },\n",
+    "                { question: 'Where did you get that amazing sprite sheet from?', answer: 'I made it.' }\n",
     "            ]\n",
     "        ],\n",
     "        [\n",
-    "            'Jupyter Notebook',\n",
+    "            'How I made it',\n",
     "            [\n",
-    "                { question: 'How do you setup a markdown cell?', answer: 'You setup a markdown cell by selecting the cell type dropdown and selecting markdown.' },\n",
-    "                { question: 'How do you setup a code cell?', answer: 'You setup a code cell by selecting the cell type dropdown and selecting code.' },\n",
-    "                { question: 'What kernel do you select to run JavaScript code?', answer: 'You select the Python kernel to run JavaScript code.' },\n",
-    "                { question: 'How do you see JavaScript console output?', answer: 'You see JavaScript console output by using the console.log() method.' }\n",
-    "            ]\n",
-    "        ],\n",
-    "        [\n",
-    "            'JavaScript',\n",
-    "            [\n",
-    "                { question: 'What is JavaScript?', answer: 'JavaScript is a programming language that enables you to create interactive web pages.' },\n",
-    "                { question: 'What is a variable?', answer: 'A variable is a container that stores data.' },\n",
-    "                { question: 'What is a function?', answer: 'A function is a block of code that performs a specific task.' },\n",
-    "                { question: 'What is a loop?', answer: 'A loop is a programming structure that repeats a sequence of instructions.' }\n",
+    "                { question: 'How did you change the sprites sprite when going a direction', answer: 'I changed the sprites sprite using a switch command that checked the x and y velocity of the sprite.' },\n",
+    "                { question: 'How did you fix the frog & fish movement', answer: 'I made it so the position increase of the frog/fish remains constant throughout holding down a key.' },\n",
+    "                { question: 'How did you make the sprite kind of go in a wave when near the player', answer: 'cosineeeeeee!!' },\n",
+    "                { question: 'How did you add the timer', answer: 'I spent what felt like 15 years trying to figure out how to make a function of setinveral to do this. I probably could have simplified it a lot tho' }\n",
     "            ]\n",
     "        ]\n",
     "    ];\n",
@@ -698,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
