--- a/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
@@ -21,6 +21,11 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,44 +167,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Data Type Operations\n",
-    "\n",
-    "In JavaScript, we will be interacting with data and data types. Data types have operators that allow you to alter the data types.\n",
-    "\n",
-    "### Assignment Operators and Math Operators\n",
-    "\n",
-    "In this example height is being assigned the value of a calculation in relation to conventional screen sizes. These operators are straight forward (`=`, `+`, `-`, `*`, `/`)\n",
-    "\n",
-    "```js\n",
-    "let width = 1920;\n",
-    "let height = Math.round(width * 9 / 16);\n",
-    "```\n",
-    "\n",
-    "### Compound Assignment\n",
-    "\n",
-    "These are shorthand for common operations and are specified as follows. Here is an example of one compound assignment. Make a code cell and try some more (`+=`, `*=`, `-=`, `\\=`)\n",
-    "\n",
-    "```js\n",
-    "let number = 100;\n",
-    "number += 1;  // short for number = number + 1;\n",
-    "```\n",
-    "\n",
-    "### Concatenation\n",
-    "\n",
-    "Concatenation is used to join two or more elements together. This is the same as the plus (`+`) operator. It looks like math, but once a string gets involved, it turns into concatenation.\n",
-    "\n",
-    "```js\n",
-    "// Simple concatenation\n",
-    "let blockSize = 50;\n",
-    "block.style.width = blockSize + \"px\";\n",
-    "```\n",
-    "\n",
-    "```js\n",
-    "/// Math at first and then concatenation following PEMDAS\n",
-    "block.style.height = blockSize * 9 / 16 + \"px\";\n",
-    "```"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -209,6 +177,30 @@
     "\n",
     "Make a code cell that show usage of compound assignment in a Data Type Operations."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%html\n",
+    "    <p>This will add 5 to the number then multiply by 5</p>\n",
+    "    <input type=\"number\" id=\"number\" name=\"number\">\n",
+    "    <button onclick=\"calculate()\">Submit</button>\n",
+    "    <script>\n",
+    "        function calculate(){\n",
+    "            let number = parseInt(document.getElementById('number').value);\n",
+    "            number += 5;\n",
+    "            number *= 5;\n",
+    "            console.log(number);\n",
+    "            alert(\"Result: \" + number); // This will show the result in an alert\n",
+    "        }\n",
+    "    </script>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -358,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -679,7 +671,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
