--- a/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -179,28 +179,60 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "    <p>This will add 5 to the number then multiply by 5</p>\n",
+       "    <input type=\"number\" id=\"solution\" name=\"solution\">\n",
+       "    <button onclick=\"calculate()\">Submit</button>\n",
+       "    <div id=\"output\"></div>\n",
+       "    <script>\n",
+       "        function calculate(){\n",
+       "            // Change 'number' to 'solution' to match the input ID\n",
+       "            let number = parseInt(document.getElementById('solution').value);\n",
+       "            number += 5;\n",
+       "            number *= 5;\n",
+       "            console.log(number);\n",
+       "            alert(\"Result: \" + number);\n",
+       "            document.getElementById('output').innerHTML = \"Your number is \" + number;\n",
+       "        }\n",
+       "    </script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
-    "    <p>This will add 5 to the number then multiply by 5</p>\n",
-    "    <input type=\"number\" id=\"number\" name=\"number\">\n",
-    "    <button onclick=\"calculate()\">Submit</button>\n",
-    "    <script>\n",
-    "        function calculate(){\n",
-    "            let number = parseInt(document.getElementById('number').value);\n",
-    "            number += 5;\n",
-    "            number *= 5;\n",
-    "            console.log(number);\n",
-    "            alert(\"Result: \" + number); // This will show the result in an alert\n",
-    "        }\n",
-    "    </script>\n"
+    "\n",
+    "<p>This will add 5 to the number then multiply by 5</p>\n",
+    "<input type=\"number\" id=\"solution\" name=\"solution\">\n",
+    "<button onclick=\"calculate()\">Submit</button>\n",
+    "<div id=\"output\"></div>\n",
+    "<script>\n",
+    "    function calculate(){\n",
+    "        // Change 'number' to 'solution' to match the input ID\n",
+    "        let number = parseInt(document.getElementById('solution').value);\n",
+    "        number += 5;\n",
+    "        number *= 5;\n",
+    "        console.log(number);\n",
+    "        alert(\"Result: \" + number);\n",
+    "        document.getElementById('output').innerHTML = \"Your number is \" + number;\n",
+    "    }\n",
+    "</script>\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -685,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
