--- a/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -531,14 +531,14 @@
        "<script>\n",
        "// Variables for the spritesheet and sprite dimensions\n",
        "const spritesheetSrc = \"https://i.ibb.co/s6449nn/character.png\"; // Path to the spritesheet\n",
-       "const spritesheetWidth = 640;   // Width of the entire spritesheet\n",
-       "const spritesheetHeight = 256;  // Height of the entire spritesheet\n",
-       "const spriteWidth = 64;          // Width of each sprite\n",
-       "const spriteHeight = 128;        // Height of each sprite\n",
-       "const totalFrames = 20;          // Total number of sprites\n",
-       "const fps = 10;                  // Frames per second for the animation\n",
+       "const spritesheetWidth = 640;   \n",
+       "const spritesheetHeight = 256;  \n",
+       "const spriteWidth = 64;          \n",
+       "const spriteHeight = 128;        \n",
+       "const totalFrames = 20;          \n",
+       "const fps = 10;                  \n",
        "\n",
-       "// Select the canvas and get the context\n",
+       "// Select the canvas and get context\n",
        "const canvas = document.getElementById('spriteCanvas');\n",
        "const ctx = canvas.getContext('2d');\n",
        "\n",
@@ -577,10 +577,6 @@
        "// Start the animation once the image is loaded\n",
        "spriteSheet.onload = function() {\n",
        "    setInterval(drawSprite, 1000 / fps); // Change frame based on FPS\n",
-       "};\n",
-       "\n",
-       "spriteSheet.onerror = function() {\n",
-       "    console.error(\"Failed to load the image from the URL.\");\n",
        "};\n",
        "</script>\n"
       ],
@@ -680,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
