--- a/_notebooks/Sprint2/2023-09-21-game_animations-json-object.ipynb
+++ b/_notebooks/Sprint2/2023-09-21-game_animations-json-object.ipynb
@@ -194,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -208,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
