--- a/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -179,60 +179,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "    <p>This will add 5 to the number then multiply by 5</p>\n",
-       "    <input type=\"number\" id=\"solution\" name=\"solution\">\n",
-       "    <button onclick=\"calculate()\">Submit</button>\n",
-       "    <div id=\"output\"></div>\n",
-       "    <script>\n",
-       "        function calculate(){\n",
-       "            // Change 'number' to 'solution' to match the input ID\n",
-       "            let number = parseInt(document.getElementById('solution').value);\n",
-       "            number += 5;\n",
-       "            number *= 5;\n",
-       "            console.log(number);\n",
-       "            alert(\"Result: \" + number);\n",
-       "            document.getElementById('output').innerHTML = \"Your number is \" + number;\n",
-       "        }\n",
-       "    </script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "%%html\n",
+    "%%html \n",
     "\n",
-    "<p>This will add 5 to the number then multiply by 5</p>\n",
-    "<input type=\"number\" id=\"solution\" name=\"solution\">\n",
-    "<button onclick=\"calculate()\">Submit</button>\n",
+    "<!-- Input definitions -->\n",
+    "<div>\n",
+    "  <label for=\"speed\">Adjust Speed (1-5):</label>\n",
+    "  <input type=\"number\" id=\"speed\" name=\"speed\" min=\"1\" max=\"5\" value=\"2\">\n",
+    "  <button onclick=\"submitSpeed()\">Submit</button>\n",
+    "</div>\n",
+    "\n",
+    "<!-- Document Object Model (DOM) output locations -->\n",
     "<div id=\"output\"></div>\n",
+    "<div id=\"error\"></div>\n",
+    "\n",
     "<script>\n",
-    "    function calculate(){\n",
-    "        // Change 'number' to 'solution' to match the input ID\n",
-    "        let number = parseInt(document.getElementById('solution').value);\n",
-    "        number += 5;\n",
-    "        number *= 5;\n",
-    "        console.log(number);\n",
-    "        alert(\"Result: \" + number);\n",
-    "        document.getElementById('output').innerHTML = \"Your number is \" + number;\n",
-    "    }\n",
-    "</script>\n"
+    "  // Function to validate and output the game speed value\n",
+    "  function submitSpeed() {\n",
+    "    let gameSpeed = document.getElementById('speed').value;\n",
+    "    \n",
+    "      // Set/clear error messages when the value is valid\n",
+    "      document.getElementById('error').innerHTML = \"\";\n",
+    "      // Output the game speed value to the console\n",
+    "      console.log(\"Game speed set to:\", gameSpeed);\n",
+    "      // Output the game speed value to the HTML page\n",
+    "      document.getElementById('output').innerHTML = \"Game speed set to: \" + gameSpeed;\n",
+    "  }\n",
+    "  \n",
+    "</script>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -717,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
