--- a/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -179,47 +179,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "  <h1>Number Calculation</h1>\n",
+       "  <input type=\"number\" id=\"numberInput\" placeholder=\"Enter a number\" />\n",
+       "  <button onclick=\"calculate()\">Calculate</button>\n",
+       "  <p id=\"result\"></p>\n",
+       "  <script>\n",
+       "      function calculate() {\n",
+       "          // Get the input value\n",
+       "          const inputNumber = parseFloat(document.getElementById('numberInput').value);\n",
+       "\n",
+       "          // Add 5 to the input number\n",
+       "          const addedValue = inputNumber + 5;\n",
+       "\n",
+       "          // Multiply the result by 5\n",
+       "          const result = addedValue * 5;\n",
+       "\n",
+       "          // Display the result\n",
+       "          document.getElementById('result').textContent = `Result:`+result;\n",
+       "      }\n",
+       "  </script>\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%%html \n",
+    "%%html\n",
+    "  <h1>Number Calculation</h1>\n",
+    "  <input type=\"number\" id=\"numberInput\" placeholder=\"Enter a number\" />\n",
+    "  <button onclick=\"calculate()\">Calculate</button>\n",
+    "  <p id=\"result\"></p>\n",
+    "  <script>\n",
+    "      function calculate() {\n",
+    "          // Get the input value\n",
+    "          const inputNumber = parseFloat(document.getElementById('numberInput').value);\n",
     "\n",
-    "<!-- Input definitions -->\n",
-    "<div>\n",
-    "  <label for=\"speed\">Adjust Speed (1-5):</label>\n",
-    "  <input type=\"number\" id=\"speed\" name=\"speed\" min=\"1\" max=\"5\" value=\"2\">\n",
-    "  <button onclick=\"submitSpeed()\">Submit</button>\n",
-    "</div>\n",
+    "          // Add 5 to the input number\n",
+    "          const addedValue = inputNumber + 5;\n",
     "\n",
-    "<!-- Document Object Model (DOM) output locations -->\n",
-    "<div id=\"output\"></div>\n",
-    "<div id=\"error\"></div>\n",
+    "          // Multiply the result by 5\n",
+    "          const result = addedValue * 5;\n",
     "\n",
-    "<script>\n",
-    "  // Function to validate and output the game speed value\n",
-    "  function submitSpeed() {\n",
-    "    let gameSpeed = document.getElementById('speed').value;\n",
-    "    \n",
-    "      // Set/clear error messages when the value is valid\n",
-    "      document.getElementById('error').innerHTML = \"\";\n",
-    "      // Output the game speed value to the console\n",
-    "      console.log(\"Game speed set to:\", gameSpeed);\n",
-    "      // Output the game speed value to the HTML page\n",
-    "      document.getElementById('output').innerHTML = \"Game speed set to: \" + gameSpeed;\n",
-    "  }\n",
-    "  \n",
-    "</script>"
+    "          // Display the result\n",
+    "          document.getElementById('result').textContent = `Result:`+result;\n",
+    "      }\n",
+    "  </script>\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -232,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -369,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -524,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "html"
