fix notebook for the last time

--- a/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-data-types-operations.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -288,7 +288,7 @@
        "  // Function to validate and output the scale value\n",
        "  function submitScale() {\n",
        "    const BLOCK_SCALE_DIVISOR = 20;\n",
-       "    const ASPECT_RATIO = 10/9;\n",
+       "    const ASPECT_RATIO = 1;\n",
        "    let block = document.getElementById('block');\n",
        "    let width = parseInt(document.getElementById('width').value);\n",
        "    \n",
@@ -355,7 +355,7 @@
     "  // Function to validate and output the scale value\n",
     "  function submitScale() {\n",
     "    const BLOCK_SCALE_DIVISOR = 20;\n",
-    "    const ASPECT_RATIO = 10/9;\n",
+    "    const ASPECT_RATIO = 1;\n",
     "    let block = document.getElementById('block');\n",
     "    let width = parseInt(document.getElementById('width').value);\n",
     "    \n",
