--- a/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
@@ -194,9 +194,8 @@
     {
      "data": {
       "text/html": [
-       "\n",
+       "<h1>Help Guide</h1>\n",
        "<div id=\"questionsAnswers\"></div>\n",
-       "\n",
        "<script>\n",
        "    // 2D array of questions and answers with titles\n",
        "    var qaArray = [\n",
@@ -256,9 +255,8 @@
    ],
    "source": [
     "%%html\n",
-    "\n",
+    "<h1>Help Guide</h1>\n",
     "<div id=\"questionsAnswers\"></div>\n",
-    "\n",
     "<script>\n",
     "    // 2D array of questions and answers with titles\n",
     "    var qaArray = [\n",
@@ -676,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
