--- a/_notebooks/Sprint2/2024-09-30-variables_IO.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-variables_IO.ipynb
@@ -166,7 +166,7 @@
    "source": [
     "### RPG Project Hack\n",
     "Identify naming convention and data type used in this code.  Which items would you change according to your research on naming conventions?  What are the data types?  Change names and provide comments to to describe data types and name convention changes.  \n",
-    "\n",
+    "The naming conventions used are snake case and Pascal Case\n",
     "1. Make a new code cell to make it easy to compare before and after.\n",
     "2. Figure out naming convention for Key-Values items.  Source and share your reference.\n",
     "\n",
@@ -209,7 +209,8 @@
    "source": [
     "### Code Block Hack\n",
     "\n",
-    "Make a new code block for some game elements that you have in your \"Ideation\"."
+    "Make a new code block for some game elements that you have in your \"Ideation\".\n",
+    "added the code block into my actual game rather then make it here"
    ]
   }
  ],
