--- a/_notebooks/Lesson Homework/2024-10-28-variables_hw.ipynb
+++ b/_notebooks/Lesson Homework/2024-10-28-variables_hw.ipynb
@@ -35,6 +35,37 @@
     "My name is [Your Name], I am [Your Age] years old, and it is [true/false] that I am a student. \n",
     "Now playing Champion by Kanye West"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "let studentName = \"Santhosh\";\nlet age = 14;\nlet isStudent = true;\nlet favoriteSong = \"Idol\";\nlet songArtist = \"Yoasobi\";\nlet playingSong = \"Now playing \" + favoriteSong + \" by \" + songArtist; \nconsole.log(\"My name is \" + studentName + \", I am \" + age + \" years old, and it is \" + isStudent +\" that I am a student. \" +playingSong);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "let studentName = \"Santhosh\";\n",
+    "let age = 14;\n",
+    "let isStudent = true;\n",
+    "let favoriteSong = \"Idol\";\n",
+    "let songArtist = \"Yoasobi\";\n",
+    "let playingSong = \"Now playing \" + favoriteSong + \" by \" + songArtist; \n",
+    "console.log(\"My name is \" + studentName + \", I am \" + age + \" years old, and it is \" + isStudent +\" that I am a student. \" +playingSong);"
+   ]
   }
  ],
  "metadata": {
@@ -53,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
