--- a/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
+++ b/_notebooks/Sprint2/2024-09-30-for_sprites.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "**MetaData**: In this article, MetaData contains information about the sprite, including its name, source URL, and orientation details such as the number of rows and columns, header size, padding, and jagged rows.\n",
     "\n",
-    "**Class**: In this context, the canvas and drawing operations are initialized and stored in a class. These are used to output the sprite sheet image and individual frames within the sprite sheet.\n",
+    "**Class**: In this cotext, the canvas and drawing operations are initialized and stored in a class. These are used to output the sprite sheet image and individual frames within the sprite sheet.\n",
     "  - **constructor**: Initializes the canvas, context, and sprite image.\n",
     "  - **draw() method**: Uses nested **for-loops** to iterate through the sprite sheet and draw each frame independently on the canvas. It calculates the source and destination coordinates for each frame, taking into account the header and padding."
    ]
