--- a/_notebooks/Lesson Homework/2024-10-31-mathhomework.ipynb
+++ b/_notebooks/Lesson Homework/2024-10-31-mathhomework.ipynb
@@ -37,6 +37,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "   let a = 5;\n    let b = 5;\n    console.log(\"Sum:\", a+b);\n    console.log(\"Difference\", a-b);\n    console.log(\"Product\", a*b);\n    console.log(\"Quotient:\", a/b);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "   let a = 5;\n",
+    "    let b = 5;\n",
+    "    console.log(\"Sum:\", a+b);\n",
+    "    console.log(\"Difference\", a-b);\n",
+    "    console.log(\"Product\", a*b);\n",
+    "    console.log(\"Quotient:\", a/b);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,6 +81,33 @@
     "console.log code \n",
     "\n",
     "console.log(\"Remainder:\", YOURVARIABLE (CORRECT MATHEMATICAL OPERATION) YOUROTHERVARIABLE);  // Output: 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "    num1 = 50;\n    num2 = 10;\n    console.log(num1 % num2);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "    num1 = 50;\n",
+    "    num2 = 10;\n",
+    "    console.log(num1 % num2);"
    ]
   },
   {
@@ -76,6 +133,36 @@
     "// Increment using ++\n",
     "count++;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4181476016.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    let count = 15;\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "   let count = 15;\n",
+    "    console.log(\"Initial Count:\", count);  \n",
+    "    count++;\n",
+    "    console.log(\"Count + 1\", count);\n",
+    "    count++;\n",
+    "    console.log(\"Count + 2\", count);\n",
+    "    count++;\n",
+    "    console.log(\"Count + 3\", count);"
+   ]
   }
  ],
  "metadata": {
@@ -94,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
