--- a/_notebooks/Lesson Homework/2024-10-29-variables_popcorn_hax.ipynb
+++ b/_notebooks/Lesson Homework/2024-10-29-variables_popcorn_hax.ipynb
@@ -37,6 +37,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "gameQuestion = \"My favorite video game is\";\ngameAnswer = \" Tears of the Kingdom\";\nconsole.log(gameQuestion + gameAnswer);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "gameQuestion = \"My favorite video game is\";\n",
+    "gameAnswer = \" Tears of the Kingdom\";\n",
+    "console.log(gameQuestion + gameAnswer);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "vscode": {
@@ -59,11 +86,53 @@
     "\n",
     "5. Output all three variables to the console using `console.log()`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "    let nullvar = null;\n    let undefinedVar;\n    let myRPG = Symbol(\"Pokemon\");\n    console.log(nullvar+undefinedVar +myRPG )\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "    let nullvar = null;\n",
+    "    let undefinedVar;\n",
+    "    let myRPG = Symbol(\"Pokemon\");\n",
+    "    console.log(nullvar+undefinedVar +myRPG )"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
