--- a/_notebooks/Lesson Homework/Nested_Conditionals/intoduction_to_nested_conditionals.ipynb
+++ b/_notebooks/Lesson Homework/Nested_Conditionals/intoduction_to_nested_conditionals.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -125,8 +125,8 @@
        "<script>\n",
        "    function runWhenDOMLoaded() {\n",
        "        // Example choices\n",
-       "        let appleColor = \"green\"; // Change this to \"green\" to test different outcomes\n",
-       "        let eatApple = \"yes\";   // Change this to \"no\" to test different outcomes\n",
+       "        let appleColor = \"yellow\"; // Change this to \"green\" to test different outcomes\n",
+       "        let eatApple = \"no\";   // Change this to \"no\" to test different outcomes\n",
        "\n",
        "        const messageElement = document.getElementById(\"message\");\n",
        "\n",
@@ -138,7 +138,7 @@
        "        // Check the color of the apple chosen by the user\n",
        "        if (appleColor === \"red\") {\n",
        "            // If the apple is red, check if the user wants to eat it\n",
-       "            if (eatApple === \"yes\") {\n",
+       "            if (eatApple === \"no\") {\n",
        "                displayMessage(\"Lmao, the apple you ate was poisonous. You're dead :D\");\n",
        "            } else {\n",
        "                displayMessage(\"You decided not to eat the red apple (You're boring -_-).\");\n",
@@ -150,7 +150,16 @@
        "            } else {\n",
        "                displayMessage(\"You decided not to eat the green apple (You're boring -_-).\");\n",
        "            }\n",
-       "        } else {\n",
+       "        } else if(appleColor === \"yellow\"){\n",
+       "            if (eatApple === \"yes\"){\n",
+       "                displayMessage('You got super powers from eating the yellow apple');\n",
+       "            }\n",
+       "            else {\n",
+       "                displayMessage('No super powers for you :((((')\n",
+       "            }\n",
+       "\n",
+       "        }\n",
+       "        else{\n",
        "            // If the user enters an invalid color, display an error message\n",
        "            displayMessage(\"Invalid answer. Please choose 'red' or 'green'.\");\n",
        "        }\n",
@@ -180,8 +189,8 @@
     "<script>\n",
     "    function runWhenDOMLoaded() {\n",
     "        // Example choices\n",
-    "        let appleColor = \"green\"; // Change this to \"green\" to test different outcomes\n",
-    "        let eatApple = \"yes\";   // Change this to \"no\" to test different outcomes\n",
+    "        let appleColor = \"yellow\"; // Change this to \"green\" to test different outcomes\n",
+    "        let eatApple = \"no\";   // Change this to \"no\" to test different outcomes\n",
     "\n",
     "        const messageElement = document.getElementById(\"message\");\n",
     "\n",
@@ -193,7 +202,7 @@
     "        // Check the color of the apple chosen by the user\n",
     "        if (appleColor === \"red\") {\n",
     "            // If the apple is red, check if the user wants to eat it\n",
-    "            if (eatApple === \"yes\") {\n",
+    "            if (eatApple === \"no\") {\n",
     "                displayMessage(\"Lmao, the apple you ate was poisonous. You're dead :D\");\n",
     "            } else {\n",
     "                displayMessage(\"You decided not to eat the red apple (You're boring -_-).\");\n",
@@ -205,7 +214,16 @@
     "            } else {\n",
     "                displayMessage(\"You decided not to eat the green apple (You're boring -_-).\");\n",
     "            }\n",
-    "        } else {\n",
+    "        } else if(appleColor === \"yellow\"){\n",
+    "            if (eatApple === \"yes\"){\n",
+    "                displayMessage('You got super powers from eating the yellow apple');\n",
+    "            }\n",
+    "            else {\n",
+    "                displayMessage('No super powers for you :((((')\n",
+    "            }\n",
+    "\n",
+    "        }\n",
+    "        else{\n",
     "            // If the user enters an invalid color, display an error message\n",
     "            displayMessage(\"Invalid answer. Please choose 'red' or 'green'.\");\n",
     "        }\n",
