--- a/_notebooks/Lesson Homework/Nested_Conditionals/2024-10-26-nested_conditionals.ipynb
+++ b/_notebooks/Lesson Homework/Nested_Conditionals/2024-10-26-nested_conditionals.ipynb
@@ -56,8 +56,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3><span style=\"font-family: Ariel; color:#94c4ff\">Popcorn Hack 2</span></h3>\n",
+    "\n",
+    "1. Open two new code cells and set them to javascript\n",
+    "2. Copy the code example from above javascript cell into both the new code cells \n",
+    "3. Change the first new code cell to print \"You aren't hungry. Maybe meal-prep for later if you had ingredients.\" \n",
+    "4. Change the second new code cell to print \"You can make a cheese sandwich at home.\" "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -77,8 +89,8 @@
        "        // Define ingredients as a JSON object\n",
        "        const ingredients = {\n",
        "            \"bread\": true,\n",
-       "            \"cheese\": false,\n",
-       "            \"tomato\": false\n",
+       "            \"cheese\": true,\n",
+       "            \"tomato\": true\n",
        "        };\n",
        "\n",
        "        const messageElement = document.getElementById(\"message\");\n",
@@ -90,12 +102,15 @@
        "\n",
        "        // Check if essential ingredients are available\n",
        "        if (isHungry) {\n",
-       "            if (ingredients.bread && ingredients.cheese) {\n",
+       "            if (ingredients.bread && ingredients.cheese && ingredients.tomato) {\n",
+       "                displayMessage(\"You can make a really bad pizza at home.\");\n",
+       "            } else if (ingredients.bread && ingredients.cheese) {\n",
        "                displayMessage(\"You can make a cheese sandwich at home.\");\n",
-       "            } else if (ingredients.bread) {\n",
-       "                displayMessage(\"You only have bread, maybe make toast.\");\n",
-       "            } else {\n",
-       "                displayMessage(\"You should order food since you don't have enough ingredients.\");\n",
+       "            } else if (ingredients.bread){\n",
+       "                displayMessage(\"Maybe you should make toast\");\n",
+       "            }\n",
+       "            else{\n",
+       "                displayMessage('You should order food since you dont have enough ingredients')\n",
        "            }\n",
        "        } else {\n",
        "            displayMessage(\"You aren't hungry. Maybe meal-prep for later if you had ingredients.\");\n",
@@ -130,8 +145,8 @@
     "        // Define ingredients as a JSON object\n",
     "        const ingredients = {\n",
     "            \"bread\": true,\n",
-    "            \"cheese\": false,\n",
-    "            \"tomato\": false\n",
+    "            \"cheese\": true,\n",
+    "            \"tomato\": true\n",
     "        };\n",
     "\n",
     "        const messageElement = document.getElementById(\"message\");\n",
@@ -143,12 +158,15 @@
     "\n",
     "        // Check if essential ingredients are available\n",
     "        if (isHungry) {\n",
-    "            if (ingredients.bread && ingredients.cheese) {\n",
+    "            if (ingredients.bread && ingredients.cheese && ingredients.tomato) {\n",
+    "                displayMessage(\"You can make a really bad pizza at home.\");\n",
+    "            } else if (ingredients.bread && ingredients.cheese) {\n",
     "                displayMessage(\"You can make a cheese sandwich at home.\");\n",
-    "            } else if (ingredients.bread) {\n",
-    "                displayMessage(\"You only have bread, maybe make toast.\");\n",
-    "            } else {\n",
-    "                displayMessage(\"You should order food since you don't have enough ingredients.\");\n",
+    "            } else if (ingredients.bread){\n",
+    "                displayMessage(\"Maybe you should make toast\");\n",
+    "            }\n",
+    "            else{\n",
+    "                displayMessage('You should order food since you dont have enough ingredients')\n",
     "            }\n",
     "        } else {\n",
     "            displayMessage(\"You aren't hungry. Maybe meal-prep for later if you had ingredients.\");\n",
@@ -163,23 +181,11 @@
     "    }\n",
     "</script>\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3><span style=\"font-family: Ariel; color:#94c4ff\">Popcorn Hack 2</span></h3>\n",
-    "\n",
-    "1. Open two new code cells and set them to javascript\n",
-    "2. Copy the code example from above javascript cell into both the new code cells \n",
-    "3. Change the first new code cell to print \"You aren't hungry. Maybe meal-prep for later if you had ingredients.\" \n",
-    "4. Change the second new code cell to print \"You can make a cheese sandwich at home.\" "
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
