--- a/_notebooks/Lesson Homework/Classes_and_Methods/2024-10-27-classes-intro.ipynb
+++ b/_notebooks/Lesson Homework/Classes_and_Methods/2024-10-27-classes-intro.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "---\n",
+    "comments: true\n",
     "layout: post\n",
-    "title: Javascript Classes and Methods \n",
-    "description: Popcorn hack 1 \n",
-    "categories: [JavaScript]\n",
-    "comments: True\n",
+    "title: JavaScript Classes & Methods Introduction\n",
+    "description: An introduction to JavaScript Classes & Methods\n",
+    "author: Lucas Masterson\n",
+    "permalink: /csse/javascript/fundamentals/classes/intro/\n",
+    "categories: [JavaScript Fundamentals]\n",
     "---"
    ]
   },
@@ -237,34 +241,51 @@
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "    class Triangle {\n        // Construct the triangle with base and height here\n        constructor(base, height){\n            this.base = base;\n            this.height = height;\n            // Calculate the length of the congruent sides for an isosceles triangle\n            this.sideLength = Math.sqrt(this.height ** 2 + (this.base / 2) ** 2);\n        }\n\n        // Get the area of the triangle\n        calcArea(){\n            return this.area();\n        }\n\n        // Calculate the area of the triangle\n        area(){\n            return (1/2) * this.base * this.height;\n        }\n\n        // Generate the sides of the triangle\n        getSides(){\n            return [this.base, this.sideLength, this.sideLength];\n        }\n    }\n\n    /*\n    Uncomment this section once you have implemented the Triangle class\n    */\n\n    const triangle = new Triangle(10, 5);\n\n    console.log(triangle.calcArea()); // 25\n    console.log(triangle.area()); // 25\n    console.log(triangle.getSides()); // [10, 5.590169943749474, 5.590169943749474]\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
+    "    class Triangle {\n",
+    "        // Construct the triangle with base and height here\n",
+    "        constructor(base, height){\n",
+    "            this.base = base;\n",
+    "            this.height = height;\n",
+    "            // Calculate the length of the congruent sides for an isosceles triangle\n",
+    "            this.sideLength = Math.sqrt(this.height ** 2 + (this.base / 2) ** 2);\n",
+    "        }\n",
     "\n",
-    "class Triangle {\n",
-    "    // Construct the triangle with base and height here\n",
+    "        // Get the area of the triangle\n",
+    "        calcArea(){\n",
+    "            return this.area();\n",
+    "        }\n",
+    "\n",
+    "        // Calculate the area of the triangle\n",
+    "        area(){\n",
+    "            return (1/2) * this.base * this.height;\n",
+    "        }\n",
+    "\n",
+    "        // Generate the sides of the triangle\n",
+    "        getSides(){\n",
+    "            return [this.base, this.sideLength, this.sideLength];\n",
+    "        }\n",
+    "    }\n",
     "\n",
     "\n",
-    "    // Get the area of the triangle here\n",
+    "    const triangle = new Triangle(10, 5);\n",
     "\n",
-    "\n",
-    "    // Calculate the area of the triangle here\n",
-    "\n",
-    "\n",
-    "    // Generate the sides of the triangle here\n",
-    "\n",
-    "\n",
-    "}\n",
-    "\n",
-    "/*\n",
-    "Uncomment this section once you have implemented the Triangle class\n",
-    "\n",
-    "const triangle = new Triangle(10, 5);\n",
-    "\n",
-    "console.log(triangle.calcArea()); // 25\n",
-    "console.log(triangle.area); // 25\n",
-    "console.log([...triangle.getSides()]); // [10, 5, 10]\n",
-    "*/"
+    "    console.log(triangle.calcArea()); // 25\n",
+    "    console.log(triangle.area()); // 25\n",
+    "    console.log(triangle.getSides()); "
    ]
   },
   {
@@ -282,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
