--- a/_notebooks/Lesson Homework/Classes_and_Methods/2024-10-27-methods-in-depth.ipynb
+++ b/_notebooks/Lesson Homework/Classes_and_Methods/2024-10-27-methods-in-depth.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: JavaScript Methods\n",
+    "description: An in-depth look at JavaScript methods.\n",
+    "author: Alex Van Linge & Lucas Masterson (reviewer)\n",
+    "permalink: /csse/javascript/fundamentals/classes/methods/\n",
+    "categories: [JavaScript Fundamentals]\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,7 +27,7 @@
     "Now that we have some of the basics out of the way, now it is time to go into methods in greater detail and depth than what was mentioned in the intro.\n",
     "\n",
     "## Defining Methods \n",
-    "Methods in JavaScript are essentially functions inside of objects. Methods are defined on the prototype of each class and shared by all instances."
+    "Methods in JavaScript are essentially functions inside of objects. To refresh your memory, objects are anything with Key-Value Pairs inside of them (ex: Name: \"Alex\"), and functions are blocks of code that perform specific tasks or actions, like console.log."
    ]
   },
   {
@@ -68,7 +85,7 @@
    "source": [
     "## Accessor Methods\n",
     "\n",
-    "A variant of methods that can be particularly useful in many scenarios are `Accessor Methods`. Accessor methods are functions defined within a class that allow you to retrieve (access) the values of the object's properties without modifying them. \n",
+    "A variant of methods that can be particularly useful in many scenarios are `Accessor Methods`. Accessor methods are functions defined within an object that allow you to retrieve (access) the values of the object's properties without modifying them. \n",
     "\n",
     "Accessor methods make debugging code much easier and just make the code as a whole more cohesive and consistent.\n"
    ]
@@ -193,18 +210,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generally speaking, you won't use generator or async at an intro level, so we can skip them as of now. If you're interested, you can find the JavaScript MDN Web Docs on methods."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Popcorn Hack Time!! (yay) \n",
     "\n",
     "For the popcorn hack, use this code cell below and create an object that must include these three things \n",
     "\n",
-    "    - A constructor to build class instances\n",
+    "    - Four Key-Value Pairs that at least include your name, age, and two others of your choosing\n",
     "    - Accessor methods (At least 2)\n",
     "    - Mutator methods (At least 2 as well) \n",
     "    "
@@ -212,30 +222,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\n// Have Fun!\n\nclass Person {\n    constructor(name, age, animal, color){\n        this.name = name;\n        this.age = age;\n        this.animal = animal;\n        this.color = color;\n    }\n\n    // Methods of choosing can go here\n    getName(){\n        return \"Your name is \" + this.name;\n    }\n    getAge(){\n        return \"You are \" + this.age +\" years old\"\n    }\n    birthday(){\n        this.age +=1;\n        return \"HAPPY BIRTHDAY!!! You are now \" + this.age + \" years old\";\n    }\n    favoriteThings(){\n        return \"Your favorite animal is \" + this.animal + \" and your favorite color is \" + this.color;\n    }\n    siblings(numOfSiblings){\n        let sibling = numOfSiblings;\n        return \"You have \" + sibling +\" siblings\"\n    }\n}\nconst Santhosh = new Person(\"Santhosh\", 14, \"giraffe\", \"orange\")\nconsole.log(Santhosh.birthday());\n// Outputs can go here \n// Set 1\n// Set 2\n// Get 1\n// Get 2\n\n// Test invalid input\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js \n",
     "\n",
     "// Have Fun!\n",
     "\n",
     "class Person {\n",
-    "    // Define the constructor here\n",
+    "    constructor(name, age, animal, color){\n",
+    "        this.name = name;\n",
+    "        this.age = age;\n",
+    "        this.animal = animal;\n",
+    "        this.color = color;\n",
+    "    }\n",
     "\n",
-    "\n",
-    "    // Method of choosing can go here\n",
-    "\n",
-    "\n",
-    "    // Method of choosing can go here\n",
-    "\n",
-    "\n",
+    "    // Methods of choosing can go here\n",
+    "    getName(){\n",
+    "        return \"Your name is \" + this.name;\n",
+    "    }\n",
+    "    getAge(){\n",
+    "        return \"You are \" + this.age +\" years old\"\n",
+    "    }\n",
+    "    birthday(){\n",
+    "        this.age +=1;\n",
+    "        return \"HAPPY BIRTHDAY!!! You are now \" + this.age + \" years old\";\n",
+    "    }\n",
+    "    favoriteThings(){\n",
+    "        return \"Your favorite animal is \" + this.animal + \" and your favorite color is \" + this.color;\n",
+    "    }\n",
+    "    siblings(numOfSiblings){\n",
+    "        let sibling = numOfSiblings;\n",
+    "        return \"You have \" + sibling +\" siblings\"\n",
+    "    }\n",
     "}\n",
-    "\n",
+    "const Santhosh = new Person(\"Santhosh\", 14, \"giraffe\", \"orange\")\n",
+    "console.log(Santhosh.birthday());\n",
     "// Outputs can go here \n",
     "// Set 1\n",
     "// Set 2\n",
@@ -258,15 +296,13 @@
     "2. W3Schools.com. https://www.w3schools.com/js/js_classes.asp\n",
     "\n",
     "****\n",
-    "*Building The Future And Keeping The Past Alive Are One In The Same Thing.*\n",
-    "\n",
-    "*Anything that can go wrong will go wrong.*"
+    "*Building The Future And Keeping The Past Alive Are One In The Same Thing.*"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
